src/objects/Stakeholder__c/Stakeholder__c.object-meta.xml
<CustomObject>
    <label>Stakeholder</label>
    <nameField>
        <label>Stakeholders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>