src/objects/Stakeholder__c/fields/HON_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>HON_Account_Plan__c</fullName>
    <label>HON Account Plan</label>
    <referenceTo>HON_Account_Plan__c</referenceTo>
    <relationshipLabel>Stakeholders</relationshipLabel>
    <relationshipName>Stakeholders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>