src/objects/Stakeholder__c/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <label>Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Anti-Sponsor</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
                <isActive>false</isActive>
                <label>Decision Maker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>